# Cpp-Board-Game-Engine

./: .gitignore  Board.cpp  Board.h  BoardGameObject.cpp  BoardGameObject.h  CMakeLists.txt  Card.cpp  Card.h  CardType.h  Cell.cpp  Cell.h  CellCondition.h  Clock.cpp  Clock.h  Dice.cpp  Dice.h  Game.cpp  Game.h  Piece.cpp  Piece.h  PieceCoordinates.h  PieceType.cpp  PieceType.h  Player.cpp  Player.h  README.md  main.cpp
engine/: BoardGameEngine.h  Clock.h  Game.h  Movement.cpp  Movement.h  Player.cpp  Player.h
engine/exceptions/: BoardGameException.cpp
engine/objects/: Board.cpp  Board.h  Card.h  Cell.cpp  Cell.h  Dice.h  Piece.cpp  Piece.h  PieceType.h
exceptions/: BoardGameException.h  InvalidMovementException.cpp  InvalidMovementException.h
minesweeper/: MineSweeper.cpp  MineSweeper.h  main.cpp
objects/: Board.h  Card.cpp  CardType.cpp  Cell.cpp  Cell.h  CellCondition.cpp  Dice.cpp  PieceCoordinates.cpp
